Added convenience function to write Rmd contents to file.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,6 @@ export(evaluateChunks)
 export(extractChunks)
 export(parseRmdTemplate)
 export(replacePlaceholders)
+export(writeRmd)
+importFrom(utils,head)
+importFrom(utils,tail)
