Added utility to create R commands to generate pipeline inputs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,10 @@ export(deparseToString)
 export(evaluateChunks)
 export(extractChunks)
 export(parseRmdTemplate)
+export(processInputCommands)
 export(replacePlaceholders)
+export(resetInputCache)
+export(wrapInput)
 export(writeRmd)
 importFrom(utils,head)
 importFrom(utils,tail)
