Namespace fix to pass CHECK.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(replacePlaceholders)
 export(resetInputCache)
 export(wrapInput)
 export(writeRmd)
+importFrom(grDevices,dev.list)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(utils,head)
