Added a saveResult wrapper to handle object + metadata saving.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ export(evaluateChunks)
 export(extractChunks)
 export(parseRmdTemplate)
 export(processInputCommands)
+export(readResult)
 export(replacePlaceholders)
 export(resetInputCache)
+export(saveResult)
 export(wrapInput)
 export(writeRmd)
 importFrom(grDevices,dev.list)
