--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,10 @@ Suggests:
     limma,
     edgeR,
     airway,
-    SummarizedExperiment
+    S4Vectors,
+    SummarizedExperiment,
+    jsonlite,
+    alabaster.base
 VignetteBuilder: knitr    
 RoxygenNote: 7.3.3
 Encoding: UTF-8
